--- a/module_1/1.1_introduction_to_typescript.md
+++ b/module_1/1.1_introduction_to_typescript.md
@@ -8,9 +8,9 @@ TypeScript offers several advantages over JavaScript:
 
 1. **Static Typing**: Static typing refers to a programming language feature that enforces specifying the types of variables, function parameters, and return values at compile-time. In the context of TypeScript, which is a statically-typed superset of JavaScript, static typing means that you can explicitly declare the types of various elements in your code.
 
-By utilizing static typing in TypeScript, you can define the expected data types for variables, function inputs, and function outputs. For example, you can specify that a variable is of type string, a function parameter should be a number, or a function should return a specific type such as boolean. These type annotations provide additional information to the TypeScript compiler about the intended usage of these elements.
+    * By utilizing static typing in TypeScript, you can define the expected data types for variables, function inputs, and function outputs. For example, you can specify that a variable is of type string, a function parameter should be a number, or a function should return a specific type such as boolean. These type annotations provide additional information to the TypeScript compiler about the intended usage of these elements.
 
-The primary benefit of static typing is that it helps identify errors and inconsistencies in your code during the development process. The TypeScript compiler performs type checking and verifies that the assigned or expected types are compatible throughout your codebase. If there is a type mismatch, such as assigning a string to a number variable or passing an incorrect type of argument to a function, the compiler will raise an error. This allows you to catch potential bugs early on and address them before running the code, leading to improved reliability.
+    * The primary benefit of static typing is that it helps identify errors and inconsistencies in your code during the development process. The TypeScript compiler performs type checking and verifies that the assigned or expected types are compatible throughout your codebase. If there is a type mismatch, such as assigning a string to a number variable or passing an incorrect type of argument to a function, the compiler will raise an error. This allows you to catch potential bugs early on and address them before running the code, leading to improved reliability.
 
 2. **Enhanced IDE Support**: TypeScript enables powerful autocompletion, intelligent code navigation, and refactoring tools. It provides a better development experience by providing more accurate hints, warnings, and error messages, helping you find and fix issues faster.
 
