Added information for how to navigate.

--- a/module_1/1.1_introduction_to_typescript.md
+++ b/module_1/1.1_introduction_to_typescript.md
@@ -1,3 +1,9 @@
+# Navigation
+
+This book can be navigated via the sidebar to the left, inside github.
+
+If you do not see the sidebar, click the ![alt text](images/sidebar_icon.png "Sidebar Icon") to expand it for navigation.
+
 # Introduction to TypeScript
 
 TypeScript is a statically-typed superset of JavaScript that compiles down to plain JavaScript. It was developed by Microsoft and designed to address some of the shortcomings of JavaScript, such as the lack of static typing and better tooling support. TypeScript adds static types, classes, interfaces, and other features to JavaScript, enabling you to write safer, more maintainable code.
