Updating info on navigation.

--- a/module_1/1.1_introduction_to_typescript.md
+++ b/module_1/1.1_introduction_to_typescript.md
@@ -2,7 +2,7 @@
 
 This book can be navigated via the sidebar to the left, inside github.
 
-If you do not see the sidebar, click the ![alt text](images/sidebar_icon.png "Sidebar Icon") to expand it for navigation.
+If you do not see the sidebar, click the ![Sidebar Icon](images/sidebar_icon.png "Sidebar Icon") above and left to expand it for navigation.
 
 # Introduction to TypeScript
 
