Changes to formatting.

--- a/module_1/1.3_setting_up_a_typscript_project.md
+++ b/module_1/1.3_setting_up_a_typscript_project.md
@@ -44,7 +44,7 @@ To customize the behavior of the TypeScript compiler, you can use a `tsconfig.js
 
 2. **Compiler Options**: Explore the various compiler options available in the `tsconfig.json` file. These options allow you to tailor the behavior of the TypeScript compiler according to your project's requirements. Refer to the TypeScript documentation for a comprehensive list of compiler options.
 
-### Conclusion
+### Wrap Up
 Setting up a TypeScript project involves organizing your codebase, managing dependencies using package managers, and customizing the TypeScript compiler's behavior through configuration files. A well-structured project and proper management of dependencies are crucial for the maintainability and scalability of your TypeScript applications.
 
 By following the practices outlined in this page, you'll be able to establish a solid foundation for your TypeScript projects. Remember to regularly update your dependencies, adhere to best practices for project organization, and customize the TypeScript compiler options to suit your project's specific needs.
