--- a/module_2/2.4_function_overloading.md
+++ b/module_2/2.4_function_overloading.md
@@ -47,6 +47,6 @@ While function overloading is a useful feature, there are a few limitations to k
 
 3. **Ambiguity**: Sometimes, TypeScript may not be able to determine the correct signature, resulting in ambiguous function calls. In such cases, it's necessary to add additional type guards or refactor the function signatures to make them more distinct.
 
-## Conclusion
+## Notes
 
 Function overloading is a powerful tool in TypeScript that allows you to define multiple function signatures with different input and output types under the same function name. It enhances code readability, type safety, and maintainability. However, you should be mindful of the limitations while implementing overloaded functions.
