Added a TypeScript Cheat Sheet

--- a/module_2/2.4_function_overloading.md
+++ b/module_2/2.4_function_overloading.md
@@ -6,7 +6,7 @@ Function overloading is a powerful feature in TypeScript that allows you to defi
 
 In TypeScript, function overloading is achieved by declaring multiple function signatures using the same function name. The list of signatures is followed by a single implementation that handles all the possible cases.
 
-Let's illustrate this with an example:
+Example:
 
 ```typescript
 // Function signature 1: Accepts two numbers and returns their sum
