--- a/module_1/1.6_module_1_wrap_up.md
+++ b/module_1/1.6_module_1_wrap_up.md
@@ -6,7 +6,7 @@ In this module, you learned the fundamental concepts and tools necessary to star
 
 - Introduction to TypeScript: You gained an understanding of what TypeScript is and how it relates to JavaScript. TypeScript brings static typing, enhanced tooling, and other features to help build scalable and maintainable applications.
 
-- Getting Started: You explored the steps to set up TypeScript in your development environment. This included installing TypeScript, configuring the TypeScript compiler options, and setting up a basic TypeScript file.
+- Getting Started: You explored the steps to set up TypeScript in your development environment. This included installing TypeScript and setting up a basic TypeScript file.
 
 - Setting up a TypeScript Project: You learned about organizing your TypeScript code into projects and managing dependencies using package managers like npm. You also discovered how to use TypeScript configuration files to customize the behavior of the TypeScript compiler.
 
@@ -16,7 +16,7 @@ In this module, you learned the fundamental concepts and tools necessary to star
 
 ## Continued Learning:
 
-In the upcoming modules, we will continue exploring TypeScript and delve into more advanced topics such as functions, classes, interfaces, modules, and TypeScript's type system features. These concepts will empower you to build robust and scalable applications using TypeScript.
+In the next modules, we will continue exploring TypeScript and dive head first into more advanced topics such as functions, classes, interfaces, modules, and TypeScript's type system features. These concepts will empower you to build robust and scalable applications using TypeScript.
 
 Take some time to reinforce your understanding of the topics covered in this module and take the remainder of this hour to practicing writing TypeScript code and experimenting with different types and variables. Remember to refer back to the module materials whenever you need a quick refresher.
 
